# Kitsune-cpp

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
eBPF_XDP/: CMakeLists.txt  build.sh  load_xpd_prog.sh  run_stat_prog_kern.sh  test_lib_stat.py  unload_xdp_prog.sh  xdp_drop.c
eBPF_XDP/basic03-map-counter/: xdp_load_and_stats.c  xdp_prog_kern.c
eBPF_XDP/common/: common_libbpf.c  common_user_bpf_xdp.c  common_user_bpf_xdp.h  fasthash.h  fixed_point.h  xdp_stats_kern.h  xdp_stats_kern_user.h
eBPF_XDP/xdp/: CMakeLists.txt  lib_stats.c  test.c  xdp_feature_kern_user.h  xdp_load_and_stats.c  xdp_prog_kern.c
include/: Autoencoder.h  FeatureExtractor.h  KitNET.h  cluster.h  featureExtractor.h  kitNET.h  netStat.h  neuralnet.h  utils.h
py/: diff_rmse.py  example.py  libfestats.py  test_libfestats.py
source/: Autoencoder.cpp  Cluster.cpp  FeatureExtractor.cpp  KitNET.cpp  cluster.cpp  featureExtractor.cpp  kitNET.cpp  netStat.cpp  neuralnet.cpp  utils.cpp
test/: kitsuneExample.cpp  test.h  testDense.cpp
